# cyroet-neuroglancer

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/: convert_and_view_image_and_annotation.sh  convert_and_view_image_and_segmentation.sh  convert_and_view_oriented_points.sh
new_examples/: README.md  compare_decimated.py  convert_annotation.py  convert_mesh_seg.py  convert_oriented_annotation-egczi1-mesh.py  convert_oriented_annotation-egczi1.py  convert_oriented_annotation-egczi2.py  convert_oriented_annotation.py  convert_segmentation.py  convert_standalone.py  make_image_state_for_volume_rendering.py  new_mesh_oriented.py  serve_MT_mesh.py  serve_actin_mesh.py  serve_max_lod.py  serve_mesh.py  serve_min_lod.py  serve_oriented_mesh.py  volume_rendering.py
src/cryo_et_neuroglancer/: chunk.py  cli.py  io.py  segmentation_decoding.py  segmentation_encoding.py  shaders.py  sharding.py  state_generation.py  url_creation.py  utils.py  write_annotations.py  write_segmentation.py
src/neuroglancer_data_conversion/: chunk.py  segmentation_decoding.py  segmentation_encoding.py  utils.py  write_segmentation.py
src/tests/: test_segmentation_decoding.py  test_segmentation_encoding.py  test_shaders.py  test_utils.py
wiki_examples/: mesh.py
