[project]
name = "neuroglancer-data-conversion"
version = "0.0.1"
dependencies = [
    "ome-zarr",
    "numpy",
    "dask",
    "zarr",
    "neuroglancer"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["neuroglancer_data_conversion"]
exclude = ["examples", "tests", "notebooks"]