[project]
name = "cryo-et-neuroglancer"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "ome-zarr",
    "numpy",
    "dask",
    "zarr",
    "neuroglancer"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
    "pytest-cov",
    "mypy",
]
cli = [
    "tqdm",
]

[build-system]
requires = ["setuptools>= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["neuroglancer_data_conversion"]
exclude = ["examples", "tests", "notebooks"]

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true

[project.scripts]
cryoet-converter = "cryo_et_neuroglancer.cli:main"